--- a/scss/_mediaqueries.scss
+++ b/scss/_mediaqueries.scss
@@ -22,6 +22,56 @@
                 width: 50vw;
             }
         }
+
+        .header{
+            display: flex;
+            flex-direction: column;
+            flex-wrap: wrap;
+            justify-content: space-around;
+            width: 100vw;
+    
+            .header__logo{
+                display: flex;
+                height: 100%;
+                flex-wrap: wrap;
+                justify-content: center;
+    
+                .logo{
+                    height: 150px;
+                    padding: 10px;
+                }
+            }
+    
+            .header__nav{
+                display: flex;
+                flex-wrap: wrap;
+    
+                .header__lista{
+                    display: flex;
+                    width: 100%;
+                    margin-top: 25px;
+                    padding: 5px;
+                    justify-content: space-around;
+                    align-items: center;
+                    flex-wrap: wrap;
+                    list-style: none;
+    
+                    .header__item{
+                        font-family: $font-titulos;
+                        justify-content: center;
+                        font-size: 1rem;
+    
+                        & a {
+                            text-decoration: none;
+                            color: white;
+                            background-color: $color-principal;
+                            font-size: large;
+                        }
+                    }
+                }
+            }   
+        }
+        
     }
 
 
