--- a/css/style.css
+++ b/css/style.css
@@ -209,27 +209,6 @@ header {
       header .header .header__logo .logo {
         height: 150px;
         padding: 10px; }
-    header .header .header__nav {
-      display: flex;
-      flex-wrap: wrap; }
-      header .header .header__nav .header__lista {
-        display: flex;
-        width: 100%;
-        margin-top: 25px;
-        padding: 5px;
-        justify-content: space-around;
-        align-items: center;
-        flex-wrap: wrap;
-        list-style: none; }
-        header .header .header__nav .header__lista .header__item {
-          font-family: "Fjalla One", sans-serif;
-          justify-content: center;
-          font-size: 1rem; }
-          header .header .header__nav .header__lista .header__item a {
-            text-decoration: none;
-            color: white;
-            background-color: black;
-            font-size: xx-large; }
 
 /* HEADER PAGINAS */
 .header__pag {
@@ -257,12 +236,31 @@ header {
   font-size: x-large;
   margin: 15px; }
 
+/* .text-light::before {
+    content: "";
+    display: block;
+    width: 1px;
+    border-bottom: 2px solid white;
+}
+
+::after, ::before {
+box-sizing: border-box;
+margin-bottom: -40px;
+} */
 .navbar-toggler {
   border: 1px solid red; }
 
 .navbar-toggler .navbar-toggler-icon {
   color: white;
   background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 30 30'%3e%3cpath stroke='rgba%28600, 600, 600, 2%29' stroke-linecap='round' stroke-miterlimit='10' stroke-width='2' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e"); }
+
+.navbar-nav {
+  position: relative; }
+  .navbar-nav a::before {
+    content: "";
+    height: 3px;
+    width: 100%;
+    background-color: white; }
 
 /* CONDICIONAL IF */
 .color-twitter {
