--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -28,35 +28,6 @@ header{
                 height: 150px;
                 padding: 10px;
             }
-        }
-
-        .header__nav{
-            display: flex;
-            flex-wrap: wrap;
-
-            .header__lista{
-                display: flex;
-                width: 100%;
-                margin-top: 25px;
-                padding: 5px;
-                justify-content: space-around;
-                align-items: center;
-                flex-wrap: wrap;
-                list-style: none;
-
-                .header__item{
-                    font-family: $font-titulos;
-                    justify-content: center;
-                    font-size: 1rem;
-
-                    & a {
-                        text-decoration: none;
-                        color: white;
-                        background-color: $color-principal;
-                        font-size: xx-large;
-                    }
-                }
-            }
         }   
     }
 }
@@ -98,6 +69,19 @@ header{
     margin: 15px;
 }
 
+/* .text-light::before {
+    content: "";
+    display: block;
+    width: 1px;
+    border-bottom: 2px solid white;
+}
+
+::after, ::before {
+box-sizing: border-box;
+margin-bottom: -40px;
+} */
+
+
 .navbar-toggler{
     border: 1px solid $color-secundario;
 
@@ -108,3 +92,15 @@ header{
     background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 30 30'%3e%3cpath stroke='rgba%28600, 600, 600, 2%29' stroke-linecap='round' stroke-miterlimit='10' stroke-width='2' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e");
 }
 
+.navbar-nav{
+    position: relative;
+
+    & a::before{
+        content: "";
+        height: 3px;
+        width: 100%;
+        background-color: white;
+
+    }
+
+}
