--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -1,6 +1,7 @@
 /* COLORES */
 $color-principal: black;
 $color-secundario: red;
+$color-terciario: white;
 
 /* LETRAS */
 $font-principal: 'Roboto', sans-serif;
