--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -33,9 +33,15 @@ footer{
             display: flex;
             grid-column: 1/2;
             grid-row: 1/2;
+            flex-direction: column;
             margin: 20px 0px 0px 10px;
             justify-content:left;
-            align-items: center;
+            align-items: left;
+            list-style: none;
+            font-style: bold;
+            color: $color-terciario;
+            font-family: $font-principal;
+            padding: 0px;
         }
 
         .redes{
