--- a/scss/main-pages/_nosotros.scss
+++ b/scss/main-pages/_nosotros.scss
@@ -65,24 +65,21 @@
         color: white;
         background-color: $color-principal;
     }
-
-    .fotos__marca{
-        grid-column: 1/5;
-        grid-row: 4/5;
-        background-color: $color-principal;
-        width: 100%;
-        height: 100%;
-    
-    }
-    
+ 
     .speed__marca{
         grid-column: 1/2;
         grid-row: 4/5;
+        margin-left: 30px;
         background-image: url(../resources/speedmarca.png);
         background-position: 50% 50%;
         background-size:80%;
         background-color: $color-principal;
         background-repeat: no-repeat;
+
+        &:hover{
+            transform: scale(1.40, 1.20);
+            transition: all 0.5s;
+        }
     
     }
     
@@ -94,6 +91,11 @@
         background-size:80%;
         background-color: $color-principal;
         background-repeat: no-repeat;
+
+        &:hover{
+            transform: scale(1.40, 1.20);
+            transition: all 0.5s;
+        }
     }
     
     .rena__marca{
@@ -104,6 +106,11 @@
         background-size:80%;   
         background-color: $color-principal;
         background-repeat: no-repeat;
+
+        &:hover{
+            transform: scale(1.40, 1.20);
+            transition: all 0.5s;
+        }
     }
     
     .block__marca{
@@ -114,6 +121,11 @@
         background-size:80%;
         background-color: $color-principal;
         background-repeat: no-repeat;
+
+        &:hover{
+            transform: scale(1.40, 1.20);
+            transition: all 0.5s;
+        }
     }
     
     .none1{
